# pico-tool-gateway

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/tool_gateway/: __init__.py  approval.py  domain.py  gateway.py  http.py  mcp.py  pipeline.py  policy.py  ports.py  settings.py  steps.py  wiring.py
src/tool_gateway/adapters/: __init__.py  memory.py
tests/: test_gateway.py  test_http.py  test_mcp_auth.py  test_pico_module.py  test_policy.py  test_policy_integration.py
