[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-tool-gateway"
version = "0.1.0"
description = "Composable tool proxy with approval pipeline and decoupled async approvals"
requires-python = ">=3.11"
dependencies = [
    "pico-ioc>=2.3.4",
    "pico-boot>=0.2.0",
    "pico-fastapi>=0.3.1",
    "pico-client-auth>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio", "ruff", "pico-testing>=0.2.0", "httpx", "pico-server-auth>=0.2.1"]

[project.entry-points."pico_boot.modules"]
tool_gateway = "tool_gateway"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pico_module = "tool_gateway"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C901"]
ignore = ["E501"]
